# reason

./: .gitignore  LICENSE  README.md  REASON_PROTOCOL_SPEC_v1.md  pyproject.toml
.github/: CODEOWNERS
.gstack/design-reports/: design-audit-astrognosy-2026-03-30.md
docs/: CNAME  EXPLAINER.md  GOVERNANCE.md  NAMESPACE_REGISTRY.md  NOVELTY.md  PROTOCOL_SPEC_CONCISE.md  RESOLUTION.md  TECHNICAL_APPENDIX.md  index.html
docs/ietf/: IETF_XML_DRAFT.md  SUBMISSION_GUIDE.md  draft-00.md
examples/: finance_example.py  hospital_example.py
sdk/: README.md
sdk/reason_py/: README.md  __init__.py  __main__.py  client.py  models.py  pyproject.toml
sdk/reason_py/reason_py/: __init__.py  client.py  models.py
sdk/reason_py/reason_py/tests/: test_client.py  test_e2e.py  test_integration.py
sdk/reason_py/tests/: test_e2e.py
sdk/reason_ts/: reason.ts
warf-node/: app.py  seed.py
