[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reason-py"
version = "0.1.4"
description = "Official Python client for reason:// — the reasoning infrastructure for the agentic internet"
authors = [{ name = "Jacob Westerbeck", email = "jacob@pcfic.com" }]
license = { text = "CC BY 4.0" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
keywords = ["reasoning", "agents", "protocol", "warf", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Free To Use But Restricted",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
reason-py = "reason_py.__main__:main"

[project.urls]
Homepage = "https://github.com/Astrognosy-Ai/reason"
Documentation = "https://github.com/Astrognosy-Ai/reason/blob/main/sdk/reason_py/README.md"
"Bug Tracker" = "https://github.com/Astrognosy-Ai/reason/issues"

[tool.setuptools]
packages = ["reason_py"]

[tool.setuptools.package-dir]
reason_py = "."

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests against a live Xport node (requires network)",
]
